--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -167,7 +167,7 @@
 							</div>
 
 						</div>
-						<aside class="col-lg-4">
+						<aside class="col-lg-4 response">
 							<div class="summary">
 								<h3 class="summary-title">Your Order</h3><!-- End .summary-title -->
 
@@ -311,48 +311,7 @@
 								
 								
 
-								<!-- <div class="mb-5">
-									<div id="accordion" role="tablist">
-						
-									  <div class="block ">
-										<div class="block-header" id="headingThree" role="tab"><strong><a class="accordion-link collapsed" data-bs-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Pay on delivery</a></strong></div>
-										<div class="collapse show" id="collapseThree" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
-										  <div class="block-body py-5 d-flex align-items-center">
-											<input type="radio" name="paymentMethod" id="payment-method-1" value="COD" >
-											<label class="ms-3" for="payment-method-1">
-											  <strong class="d-block text-uppercase "> Pay on delivery</strong>
-											  <span class="text-muted text-sm">Pay on delivery is available for orders above ₹1000 only.    </span>
-											  <br>
-											</label>
-										  </div>
-										</div>
-									  </div>
-									  <div class="block ">
-										<div class="block-header" id="headingOne" role="tab"><strong><a class="accordion-link collapsed" data-bs-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Wallet 
-											 </a></strong></div>
-										<div class="collapse show" id="collapseOne" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-										  <div class="block-body py-5 d-flex align-items-center">
-											<input  type="radio" name="paymentMethod" id="payment-method-2" value="Wallet">
-											<label class="ms-3" for="payment-method-2"><strong class="d-block text-uppercase mb-2"> Pay using Wallet</strong>
-											 
-											</label>
-										  </div>
-										</div>
-									  </div>
-									  <div class="block">
-										<div class="block-header" id="headingTwo" role="tab"><strong><a class="accordion-link collapsed" data-bs-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Razorpay</a></strong></div>
-										<div class="collapse show " id="collapseTwo" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
-										  <div class="block-body py-5 d-flex align-items-center">
-											<input type="radio" name="paymentMethod" id="payment-method-3" value="Online">
-											<label class="ms-3" for="payment-method-3">
-											  <strong class="d-block text-uppercase "> Pay with Razorpay</strong>
-											  <span class="text-muted text-warning text-sm">Will reduce your wallet balance.</span>
-											</label>
-										  </div>
-										</div>
-									  </div>
-									</div>
-								  </div> -->
+							
 						
 								  <button id="submitOrder" class=" btn btn-outline-success btn-lg" type="submit">Place Order</button>
 								</div><!-- End .summary -->
