--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,9 +1,6 @@
 <main class="main">
   <!-- Page Header -->
-  
-  <div
-    class="page-header text-center"
-    style="background-image: url('/assets/images/page-header-bg.jpg')" >
+  <div class="page-header text-center" style="background-image: url('/assets/images/page-header-bg.jpg')">
     <div class="container">
       <h1 class="page-title">Shopping Cart<span>Shop</span></h1>
     </div>
@@ -15,188 +12,111 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
         <li class="breadcrumb-item"><a href="#">Shop</a></li>
-        <li class="breadcrumb-item active" aria-current="page">
-          Shopping Cart
-        </li>
+        <li class="breadcrumb-item active" aria-current="page">Shopping Cart</li>
       </ol>
     </div>
   </nav>
 
-  <% if (typeof userCart !=='undefined' && userCart && userCart.items.length >0) { %>
-    <!-- Cart Content -->
-    <div class="page-content">
-      <div class="cart">
-        <div class="container">
-          <div class="row">
-            <!-- Cart Items -->
-            <div class="col-lg-9">
-              <table class="table table-cart table-mobile">
-                <thead>
-                  <tr>
-                    <th>Product</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Total</th>
-                    <th></th>
-                  </tr>
-                </thead>
+  <% if (typeof userCart !== 'undefined' && userCart && userCart.items.length > 0) { %>
+  <!-- Cart Content -->
+  <div class="page-content">
+    <div class="cart">
+      <div class="container">
+        <div class="row">
+          <!-- Cart Items -->
+          <div class="col-lg-9 col-md-8 col-sm-12">
+            <table class="table table-cart table-mobile">
+              <thead>
+                <tr>
+                  <th>Product</th>
+                  <th>Price</th>
+                  <th>Quantity</th>
+                  <th>Total</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% userCart.items.forEach((item) => { %>
+                <tr>
+                  <td>
+                    <div class="d-flex align-items-center">
+                      <% if (item.product_id.onOffer) { %>
+                      <div class="ribbon ribbon-info">On offer <%= item.product_id.offerDiscountRate %>%</div>
+                      <% } %>
+                      <img class="cart-item-img img-fluid img-thumbnail me-3" style="width: 7rem"
+                        src="/uploads/cropped/<%= item.product_id.images.image1 %>" alt="...">
+                      <div class="cart-title text-start">
+                        <a class="text-uppercase text-dark"><strong><%= item.product_id.product_name %></strong></a>
+                      </div>
+                    </div>
+                  </td>
+                  <td class="align-middle">₹<%= item.product_id.sellingPrice %></td>
+                  <td class="align-middle">
+                    <div class="d-flex flex-row">
+                      <button onclick="updateQuantity('<%- item.product_id._id %>', 'false')"
+                        class="btn btn-link px-2" type="button">
+                        <i class="fas fa-minus fa-sm"></i>
+                      </button>
+                      <input id="quantity-input-<%- item.product_id._id %>" min="0" name="quantity"
+                        value="<%- item.quantity %>" type="number" class="form-control text-center mx-2" readonly
+                        style="width: 65px" />
+                      <button onclick="updateQuantity('<%- item.product_id._id %>', 'true')" class="btn btn-link px-2"
+                        type="button">
+                        <i class="fas fa-plus fa-sm"></i>
+                      </button>
+                    </div>
+                  </td>
+                  <td class="align-middle" id="itemTotal-<%- item.product_id._id %>">₹<%= item.itemTotal %></td>
+                  <td class="align-middle">
+                    <button onclick="removeFromCart('<%- item.product_id._id %>')" class="btn btn-light cart-remove">
+                      <i class="bi bi-x-lg text-danger"></i>
+                    </button>
+                  </td>
+                </tr>
+                <% }) %>
+              </tbody>
+            </table>
+          </div>
+
+          <!-- Cart Summary -->
+          <aside class="col-lg-3 col-md-4 col-sm-12">
+            <div class="summary summary-cart">
+              <h3 class="summary-title">Cart Total</h3>
+              <table class="table table-summary">
                 <tbody>
-                  <% userCart.items.forEach((item)=> { %>
-                    <tr>
-                      <td>
-                          <div class="d-flex align-items-center">
-                              <% if (item.product_id.onOffer) { %>
-                                  <div class="ribbon ribbon-info">On offer <%= item.product_id.offerDiscountRate %>%</div>
-                              <% } %>
-                              <img class="cart-item-img img-fluid img-thumbnail" style="width: 7rem" src="/uploads/cropped/<%= item.product_id.images.image1 %>" alt="...">
-                              <div class="cart-title text-start">
-                                  <a class="text-uppercase text-dark"><strong><%= item.product_id.product_name %></strong></a>
-                              </div>
-                          </div>
-                      </td>
-                      <td class="align-middle">₹<%= item.product_id.sellingPrice %></td>
-                  
-                      <td class="align-middle">
-                          <div class="d-flex flex-row">
-                              <button onclick="updateQuantity('<%- item.product_id._id %>', 'false')" class="btn btn-link px-2" type="button">
-                                  <i class="fas fa-minus fa-sm"></i>
-                              </button>
-                              <input id="quantity-input-<%- item.product_id._id %>" min="0" name="quantity" value="<%-item.quantity %>" type="number" style="width: 65px" readonly />
-                              <button onclick="updateQuantity('<%- item.product_id._id %>', 'true')" class="btn btn-link px-2" type="button">
-                                  <i class="fas fa-plus fa-sm"></i>
-                              </button>
-                          </div>
-                      </td>
-                  
-                      <td class="align-middle" id="itemTotal-<%- item.product_id._id %>">₹<%= item.itemTotal %></td>
-                      <td class="align-middle">
-                          <button onclick="removeFromCart('<%- item.product_id._id %>')" class="btn btn-light cart-remove">
-                              <i class="delete bi bi-x-lg text-danger"></i>
-                          </button>
-                      </td>
+                  <tr class="summary-subtotal">
+                    <td>Subtotal:</td>
+                    <td><span id="cartTotal">₹<%= userCart.totalPrice %></span></td>
                   </tr>
-                  
-                  <% }) %>
+                  <tr class="summary-total">
+                    <td>Total:</td>
+                    <td><strong id="grandTotal" class="order-summary-total">₹<%= userCart.totalPrice %></strong></td>
+                  </tr>
                 </tbody>
               </table>
+              <a href="/user/checkout" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO CHECKOUT</a>
+              <a href="/" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE SHOPPING</span><i
+                  class="icon-refresh"></i></a>
             </div>
-            <!-- Cart Summary -->
-            <aside class="col-lg-3">
-              <div class="summary summary-cart">
-                <h3 class="summary-title">Cart Total</h3>
-                <table class="table table-summary">
-                  <tbody>
-                    <tr class="summary-subtotal">
-                      <td>Subtotal:</td>
-                      <td>
-                        <span id="cartTotal">₹<%= userCart.totalPrice %></span>
-                      </td>
-                    </tr>
-                    <tr class="summary-shipping">
-                      <td>Shipping:</td>
-                      <td>&nbsp;</td>
-                    </tr>
-                    <!-- Shipping Options -->
-                    <tr class="summary-shipping-row">
-                      <td>
-                        <div class="custom-control custom-radio">
-                          <input
-                            type="radio"
-                            id="free-shipping"
-                            name="shipping"
-                            class="custom-control-input"
-                          />
-                          <label class="custom-control-label" for="free-shipping"
-                            >Free Shipping</label
-                          >
-                        </div>
-                      </td>
-                      <td>₹0.00</td>
-                    </tr>
-                    <tr class="summary-shipping-row">
-                      <td>
-                        <div class="custom-control custom-radio">
-                          <input
-                            type="radio"
-                            id="standart-shipping"
-                            name="shipping"
-                            class="custom-control-input"
-                          />
-                          <label
-                            class="custom-control-label"
-                            for="standart-shipping"
-                            >Standard:</label
-                          >
-                        </div>
-                      </td>
-                      <td>₹10.00</td>
-                    </tr>
-                    <tr class="summary-shipping-row">
-                      <td>
-                        <div class="custom-control custom-radio">
-                          <input
-                            type="radio"
-                            id="express-shipping"
-                            name="shipping"
-                            class="custom-control-input"
-                          />
-                          <label
-                            class="custom-control-label"
-                            for="express-shipping"
-                            >Express:</label
-                          >
-                        </div>
-                      </td>
-                      <td>₹20.00</td>
-                    </tr>
-                    <tr class="summary-shipping-estimate">
-                      <td>
-                        Estimate for Your Country<br />
-                        <a href="/address">Change address</a>
-                      </td>
-                      <td>&nbsp;</td>
-                    </tr>
-                    <tr class="summary-total">
-                      <td>Total:</td>
-                      <td>
-                        <strong id="grandTotal" class="order-summary-total"
-                          >₹<%= userCart.totalPrice %>
-                        </strong>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-                <a
-                  href="/user/checkout"
-                  class="btn btn-outline-primary-2 btn-order btn-block"
-                  >PROCEED TO CHECKOUT</a
-                >
-                <a href="/" class="btn btn-outline-dark-2 btn-block mb-3"
-                  ><span>CONTINUE SHOPPING</span><i class="icon-refresh"></i
-                ></a>
-              </div>
-            </aside>
-          </div>
+          </aside>
         </div>
       </div>
     </div>
-   
-    <% } else { %>
-      <!-- If cart is empty -->
-      <div class="container my-5 mb-6">
-        <div class="col my-5 text-center">
-          <h2 class="h1">
-            Cart is empty...
-          </h2>
-          <h3 class="my-5">
-            <a href="/">
-              <button class="btn btn-lg btn-primary">Shop Now</button>
-            </a>
-          </h3>
-        </div>
-      </div>
-      
-      <% } %>
+  </div>
+
+  <% } else { %>
+  <!-- If cart is empty -->
+  <div class="container my-5">
+    <div class="col my-5 text-center">
+      <h2 class="h1">Cart is empty...</h2>
+      <h3 class="my-5">
+        <a href="/">
+          <button class="btn btn-lg btn-primary">Shop Now</button>
+        </a>
+      </h3>
+    </div>
+  </div>
+  <% } %>
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -206,41 +126,35 @@
     let qty = increment === "true" ? 1 : -1;
 
     try {
-      const response = await fetch(
-        `/user/update-quantity/${productId}?qty=${qty}`,
-        {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-        }
-      );
+      const response = await fetch(`/user/update-quantity/${productId}?qty=${qty}`, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+      });
 
       const data = await response.json();
 
       if (!response.ok) {
         throw new Error(data.message);
       }
-      console.log(data);
+
       const qtyInput = document.getElementById(`quantity-input-${productId}`);
       if (parseInt(qtyInput.value) === 0) {
         Swal.fire({
           icon: "error",
           title: "Error",
-          text: "Cant Decrease To Zero",
+          text: "Cannot decrease quantity to zero.",
         }).then(() => {
           location.reload();
         });
       }
-      if (data.success) {
-        // UI update
 
-        document.getElementById(`quantity-input-${productId}`).value =
-          data.currentItem.quantity;
+      if (data.success) {
+        document.getElementById(`quantity-input-${productId}`).value = data.currentItem.quantity;
         document.getElementById("cartTotal").innerHTML = "₹" + data.totalPrice;
         document.getElementById("grandTotal").innerHTML = "₹" + data.totalPrice;
-        document.getElementById(`itemTotal-${productId}`).innerHTML =
-          "₹" + data.currentItem.itemTotal;
+        document.getElementById(`itemTotal-${productId}`).innerHTML = "₹" + data.currentItem.itemTotal;
       } else {
         Swal.fire({
           title: "Error!",
@@ -250,8 +164,6 @@
         });
       }
     } catch (error) {
-      console.log(error);
-
       Swal.fire({
         title: "Error!",
         text: error.message,
@@ -260,52 +172,45 @@
       });
     }
   };
-</script>
-<script defer>
+
   const removeFromCart = async (productId) => {
     Swal.fire({
       title: "Are you sure?",
-      text: `This item will be removed from the cart`,
+      text: `This item will be removed from the cart.`,
       icon: "warning",
       showCancelButton: true,
       confirmButtonColor: "#3085d6",
       cancelButtonColor: "#d33",
-      confirmButtonText: "Yes, Remove it!",
+      confirmButtonText: "Yes, remove it!",
     }).then(async (result) => {
       if (result.isConfirmed) {
         try {
-          const response = await fetch(
-            `/user/cart/remove-cartItem/${productId}`,
-            {
-              method: "DELETE",
-              headers: {
-                "Content-Type": "application/json",
-              },
-            }
-          );
+          const response = await fetch(`/user/cart/remove-cartItem/${productId}`, {
+            method: "DELETE",
+            headers: {
+              "Content-Type": "application/json",
+            },
+          });
           const data = await response.json();
-          console.log(response)
-          console.log(data);
           if (!response.ok) {
             throw new Error(data.message);
           }
-          if(data.success){
+          if (data.success) {
             Swal.fire({
-                icon: 'success',
-                title: 'Success',
-                text: data.message,
-            }).then(()=>{
-                location.reload();
-            })
-          }else{
+              icon: 'success',
+              title: 'Success',
+              text: data.message,
+            }).then(() => {
+              location.reload();
+            });
+          } else {
             Swal.fire({
-                icon: 'error',
-                title: 'Error',
-                text: data.message,
-            })
+              icon: 'error',
+              title: 'Error',
+              text: data.message,
+            });
           }
         } catch (error) {
-          console.error(error);
           Swal.fire({
             title: "Error!",
             text: error.message,
