--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,118 +1,106 @@
-
 <main class="main">
   <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
     <div class="container">
-      <h1 class="page-title">My Account<span style="color: green;">Ministore</span></h1>
+      <h1 class="page-title">My Account <span style="color: green;">Ministore</span></h1>
     </div><!-- End .container -->
   </div><!-- End .page-header -->
-    <nav aria-label="breadcrumb" class="breadcrumb-nav mb-3">
-        <div class="container">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Shop</a></li>
-                <li class="breadcrumb-item active" aria-current="page">My Account</li>
-            </ol>
-        </div><!-- End .container -->
-      </nav><!-- End .breadcrumb-nav -->
+  <nav aria-label="breadcrumb" class="breadcrumb-nav mb-3">
+    <div class="container">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Shop</a></li>
+        <li class="breadcrumb-item active" aria-current="page">My Account</li>
+      </ol>
+    </div><!-- End .container -->
+  </nav><!-- End .breadcrumb-nav -->
 
-      <div class="container mb-5">
-        <div class="row">
-          <%- include('../partials/user/sidebar.ejs') %>
-          <div class="col-lg-8">
-            <div class="center">
-                        <br>
-                        <div class="center" >
-                        <h3 class="m-2 text-capitalize"><%- user.firstName + ' ' + user.lastName %></h3><br>
-                        <p class="m-2 ">Email Address   : <%- user.email %></p><br>
-                        <p class="m-2">phone No :<%- user.phone%></p><br>
-                        <p class="m-2 ">Country: India</p><br>
-                        </div>
-                      </div>
-                    </div>
-                    </div>
-                    </div>
-                    <div class="row">
-                      <!-- Update Profile Form -->
-                      <div class="col-md-6">
-                        <form id="update-form" action="/user/profile" method="POST">
-                          <div class="card bg-light rounded-3 p-4 mb-4">
-                            <h4 class="card-title mb-4">Update Profile</h4>
-                            <div class="mb-3">
-                              <label class="form-label" for="account-fn">First Name</label>
-                              <input name="firstName" class="form-control" type="text" id="account-fn" value="<%- user.firstName %>">
-                              <small></small>
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label" for="account-ln">Last Name</label>
-                              <input name="lastName" class="form-control" type="text" id="account-ln" value="<%- user.lastName %>">
-                              <small></small>
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label" for="account-email">Email Address</label>
-                              <input class="form-control" type="email" id="account-email" value="<%- user.email %>" disabled>
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label" for="account-phone">Phone Number</label>
-                              <input name="phone" class="form-control" type="text" id="account-phone" value="<%- user.phone %>" placeholder="9778877665" required>
-                              <small></small>
-                            </div>
-                            <hr class="mt-4 mb-3">
-                            <div class="d-grid">
-                              <button class="btn btn-success" type="submit">Save Profile</button>
-                            </div>
-                          </div>
-                        </form>
-                      </div>
-                    
-                      <!-- Change Password Form -->
-                      <div class="col-md-6">
-                        <form action="/user/reset-password" method="POST" id="reset-password-form">
-                          <div class="card bg-light rounded-3 p-4 mb-4">
-                            <h4 class="card-title mb-4">Change Password</h4>
-                            <div class="mb-3">
-                              <label class="form-label" for="oldPassword">Old Password</label>
-                              <div class="input-group">
-                                <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Old Password">
-                                <button class="btn btn-outline-secondary" type="button" id="toggleOldPassword">
-                                  <i class="bi bi-eye-slash"></i>
-                                </button>
-                              </div>
-                              <small></small>
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label" for="newPassword">New Password</label>
-                              <div class="input-group">
-                                <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="New Password">
-                                <button class="btn btn-outline-secondary" type="button" id="toggleNewPassword">
-                                  <i class="bi bi-eye-slash"></i>
-                                </button>
-                              </div>
-                              <small></small>
-                            </div>
-                            <div class="mb-3">
-                              <label class="form-label" for="confirmNewPassword">Confirm New Password</label>
-                              <div class="input-group">
-                                <input type="password" class="form-control" id="confirmNewPassword" name="confirmNewPassword" placeholder="Confirm New Password">
-                                <button class="btn btn-outline-secondary" type="button" id="toggleNewPasswordConfirm">
-                                  <i class="bi bi-eye-slash"></i>
-                                </button>
-                              </div>
-                              <small></small>
-                            </div>
-                            <hr class="mt-4 mb-3">
-                            <div class="d-grid">
-                              <button class="btn btn-success" type="submit">Change Password</button>
-                            </div>
-                          </div>
-                        </form>
-                      </div>
-                    </div>
+  <div class="container mb-5">
+    <div class="row">
+      <%- include('../partials/user/sidebar.ejs') %>
+        <div class="col-lg-8">
+          <div class="card bg-light rounded-3 p-4 mb-4">
+            <h3 class="m-2 text-capitalize"><%- user.firstName + ' ' + user.lastName %></h3>
+            <p class="m-2">Email Address: <%- user.email %></p>
+            <p class="m-2">Phone No: <%- user.phone %></p>
+            <p class="m-2">Country: India</p>
+          </div>
+          <div class="row">
+            <!-- Update Profile Form -->
+            <div class="col-md-6">
+              <form id="update-form" action="/user/profile" method="POST">
+                <div class="card bg-light rounded-3 p-4 mb-4">
+                  <h4 class="card-title mb-4">Update Profile</h4>
+                  <div class="mb-3">
+                    <label class="form-label" for="account-fn">First Name</label>
+                    <input name="firstName" class="form-control" type="text" id="account-fn"
+                      value="<%- user.firstName %>">
+                  </div>
+                  <div class="mb-3">
+                    <label class="form-label" for="account-ln">Last Name</label>
+                    <input name="lastName" class="form-control" type="text" id="account-ln"
+                      value="<%- user.lastName %>">
+                  </div>
+                  <div class="mb-3">
+                    <label class="form-label" for="account-email">Email Address</label>
+                    <input class="form-control" type="email" id="account-email" value="<%- user.email %>" disabled>
+                  </div>
+                  <div class="mb-3">
+                    <label class="form-label" for="account-phone">Phone Number</label>
+                    <input name="phone" class="form-control" type="text" id="account-phone" value="<%- user.phone %>"
+                      placeholder="9778877665" required>
+                  </div>
+                  <div class="d-grid">
+                    <button class="btn btn-success" type="submit">Save Profile</button>
+                  </div>
+                </div>
+              </form>
+            </div>
 
+            <!-- Change Password Form -->
+            <div class="col-md-6">
+              <form action="/user/change-password" method="POST" id="reset-password-form">
+                <div class="card bg-light rounded-3 p-4 mb-4">
+                  <h4 class="card-title mb-4">Change Password</h4>
+                  <div class="mb-3">
+                    <label class="form-label" for="oldPassword">Old Password</label>
+                    <div class="d-flex align-items-center">
+                      <input type="password" class="form-control" id="oldPassword" name="oldPassword"
+                        placeholder="Old Password" onfocus="this.placeholder = ''"
+                        onblur="this.placeholder = 'Password'">
+                      <i class="bi bi-eye-slash" id="toggleOldPassword"
+                        style="position: relative; z-index: 8; left: -30px; width: 0%; cursor: pointer;"></i>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6 mb-3">
+                      <div class="d-flex align-items-center">
+                        <input type="password" class="form-control" id="newPassword" name="newPassword"
+                          placeholder="New Password" onfocus="this.placeholder = ''"
+                          onblur="this.placeholder = 'Password'">
+                        <i class="bi bi-eye-slash" id="toggleNewPassword"
+                          style="position: relative; z-index: 8; left: -30px; width: 0%; cursor: pointer;"></i>
+                      </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                      <div class="d-flex align-items-center">
+                        <input type="password" class="form-control" id="confirmNewPassword" name="confirmNewPassword"
+                          placeholder="Confirm New Password" onfocus="this.placeholder = ''"
+                          onblur="this.placeholder = 'Confirm New Password'">
+                        <i class="bi bi-eye-slash" id="toggleNewPasswordConfirm"
+                          style="position: relative; z-index: 8; left: -30px; width: 0%; cursor: pointer;"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="d-grid">
+                    <button class="btn btn-success" type="submit">Change Password</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
-      </div>
-    
     </div>
-    </div>
-    
-    <script defer src="/javascripts/updateProfile.js"></script>
-    <script defer src="/javascripts/resetPassValidation.js"></script>
+  </div>
+</main>
+
+<script defer src="/javascripts/updateProfile.js"></script>
